--- a/lang/lang-es_ES.po
+++ b/lang/lang-es_ES.po
@@ -16,7 +16,7 @@ msgid "USB Flash Creator"
 msgstr "Creador de flash USB"
 
 msgctxt "Creator|"
-msgid "Select Version"
+msgid "Select version"
 msgstr "Elija una versión"
 
 msgctxt "Creator|"
@@ -36,15 +36,11 @@ msgid "Customize"
 msgstr "Personalizar"
 
 msgctxt "Creator|"
-msgid "Server Name"
-msgstr "Nombre del servidor"
+msgid "Server name:"
+msgstr "Nombre del servidor:"
 
 msgctxt "Creator|"
-msgid "Server Name"
-msgstr "Nombre del servidor"
-
-msgctxt "Creator|"
-msgid "Network Mode:"
+msgid "Network mode:"
 msgstr "Modo de red:"
 
 msgctxt "Creator|"
@@ -64,16 +60,24 @@ msgid "Download and Install the Spanish Language Pack"
 msgstr "Descargue e instale el paquete de idioma español"
 
 msgctxt "Creator|"
-msgid "Select Your USB Flash Device"
+msgid "Select your USB Flash device"
 msgstr "Seleccione el dispositivo flash USB"
 
 msgctxt "Creator|"
-msgid "Write Image"
+msgid "Write image"
 msgstr "Escribir imagen"
 
 msgctxt "Creator|"
-msgid "About"
+msgid "&About"
 msgstr "Sobre"
+
+msgctxt "Creator|"
+msgid "&Write"
+msgstr "Escribir"
+
+msgctxt "Creator|"
+msgid "Cance&l"
+msgstr "Cancelar"
 
 msgctxt "Creator|"
 msgid "© 2021 Lime Technology, Inc"
@@ -84,21 +88,25 @@ msgid "This software was created under GPLv2, using earlier work from LibreELEC.
 msgstr "Este software fue creado bajo GPLv2, utilizando trabajos anteriores de LibreELEC."
 
 msgctxt "Creator|"
-msgid "This software was created under GPLv2, using earlier work from LibreELEC."
-msgstr "Este software fue creado bajo GPLv2, utilizando trabajos anteriores de LibreELEC."
+msgid "For license, credits and history, please read:"
+msgstr "Para la licencia, créditos e historia, por favor, lea:"
 
 msgctxt "Creator|"
-msgid "For license, credits and history, please read: https://github.com/limetech/usb-creator"
-msgstr "Para la licencia, créditos e historia, por favor, lea: https://github.com/limetech/usb-creator"
+msgid "If you are having issues getting up and running, see also the Manual Method:"
+msgstr "Si tiene problemas con el creador de USB, consulte también el Método manual:"
 
 msgctxt "Creator|"
-msgid "If you are having issues getting up and running, see also the Manual Method: https://wiki.unraid.net/Manual/Changing_The_Flash_Device#Manual_Method_.28Legacy.29"
-msgstr "Si tiene problemas con el creador de USB, consulte también el Método manual: https://wiki.unraid.net/Manual/Changing_The_Flash_Device#Manual_Method_.28Legacy.29"
+msgid "To report issues with this tool, please send email to:"
+msgstr "Para informar de problemas con esta herramienta, por favor envíe un correo electrónico a:"
 
 msgctxt "Creator|"
-msgid "To report issues with this tool, please send an email to: general@support.unraid.net"
-msgstr "Para informar de problemas con esta herramienta, por favor envíe un correo electrónico a general@support.unraid.net"
-
-msgctxt "Creator|"
-msgid "Close"
+msgid "&Close"
 msgstr "Cerrar"
+
+msgctxt "Creator|"
+msgid ""
+"Version: %1\n"
+"Build date: %2"
+msgstr ""
+"Versión: %1\n"
+"Fecha de construcción: %2"
