--- a/lang/lang-de_DE.po
+++ b/lang/lang-de_DE.po
@@ -77,15 +77,15 @@ msgstr "Über"
 
 msgctxt "Creator|"
 msgid "&Write"
-msgstr "TODO"
+msgstr "Schreibe"
 
 msgctxt "Creator|"
 msgid "Cance&l"
-msgstr "TODO"
+msgstr "Stornieren"
 
 msgctxt "Creator|"
-msgid "© 2021 Lime Technology, Inc"
-msgstr "© 2021 Lime Technology, Inc"
+msgid "© 2022 Lime Technology, Inc"
+msgstr "© 2022 Lime Technology, Inc"
 
 msgctxt "Creator|"
 msgid "This software was created under GPLv2, using earlier work from LibreELEC."
@@ -96,8 +96,8 @@ msgid "For license, credits and history, please read:"
 msgstr "Für Lizenz, Danksagung und Versionsverlauf bitte:"
 
 msgctxt "Creator|"
-msgid "If you are having issues getting up and running, see also the Manual Method:"
-msgstr "Falls Probleme auftreten, kann der USB Stick auch manuell erstellt werden:"
+msgid "If you are having issues getting up and running, see also the <a href='https://wiki.unraid.net/Articles/Getting_Started#Manual_Install_Method'>Manual Method</a>"
+msgstr "Falls Probleme auftreten, kann der USB Stick auch <a href='https://wiki.unraid.net/Manuelle_Methode_-_Deutsch'>manuell erstellt werden</a>"
 
 msgctxt "Creator|"
 msgid "To report issues with this tool, please email:"
@@ -112,6 +112,6 @@ msgid ""
 "Version: %1\n"
 "Build date: %2"
 msgstr ""
-"TODO: %1\n"
-"TODO: %2"
+"Ausführung: %1\n"
+"Baudatum: %2"
 
