--- a/lang/lang-fr_FR.po
+++ b/lang/lang-fr_FR.po
@@ -7,7 +7,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
+"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Qt-Contexts: true\n"
 
@@ -84,8 +84,8 @@ msgid "Cance&l"
 msgstr "Annuler"
 
 msgctxt "Creator|"
-msgid "© 2021 Lime Technology, Inc"
-msgstr "© 2021 Lime Technology, Inc"
+msgid "© 2022 Lime Technology, Inc"
+msgstr "© 2022 Lime Technology, Inc"
 
 msgctxt "Creator|"
 msgid "This software was created under GPLv2, using earlier work from LibreELEC."
@@ -96,8 +96,8 @@ msgid "For license, credits and history, please read:"
 msgstr "Pour la licence, les crédits et l'historique, svp lire:"
 
 msgctxt "Creator|"
-msgid "If you are having issues getting up and running, see also the Manual Method:"
-msgstr "Si vous avez des problèmes à démarrer et être opérationnel, voir également la méthode manuelle:"
+msgid "If you are having issues getting up and running, see also the <a href='https://wiki.unraid.net/Articles/Getting_Started#Manual_Install_Method'>Manual Method</a>"
+msgstr "Si vous avez des problèmes à démarrer et être opérationnel, voir également la <a href='https://wiki.unraid.net/M%C3%A9thode_Manuelle_-_Fran%C3%A7ais'>méthode manuelle</a>"
 
 msgctxt "Creator|"
 msgid "To report issues with this tool, please email:"
