--- a/lang/lang-zh_CN.po
+++ b/lang/lang-zh_CN.po
@@ -60,7 +60,7 @@ msgid "Allow UEFI Boot "
 msgstr "允许使用 UEFI 启动 "
 
 msgctxt "Creator|"
-msgid "Download and Install the Chinse Language Pack" 
+msgid "Download and Install the Chinese Language Pack" 
 msgstr "下载并安装中文语言包"
 
 msgctxt "Creator|"
@@ -77,15 +77,15 @@ msgstr "关于"
 
 msgctxt "Creator|"
 msgid "&Write"
-msgstr "TODO"
+msgstr "写"
 
 msgctxt "Creator|"
 msgid "Cance&l"
-msgstr "TODO"
+msgstr "取消"
 
 msgctxt "Creator|"
-msgid "© 2021 Lime Technology, Inc"
-msgstr "© 2021 Lime Technology, Inc"
+msgid "© 2022 Lime Technology, Inc"
+msgstr "© 2022 Lime Technology, Inc"
 
 msgctxt "Creator|"
 msgid "This software was created under GPLv2, using earlier work from LibreELEC."
@@ -96,8 +96,8 @@ msgid "For license, credits and history, please read:"
 msgstr "关于授权许可、制作人员及历史，请阅读:"
 
 msgctxt "Creator|"
-msgid "If you are having issues getting up and running, see also the Manual Method:"
-msgstr "如在启动和运行过程中存在任何问题，亦可查阅手动制作方式:"
+msgid "If you are having issues getting up and running, see also the <a href='https://wiki.unraid.net/Articles/Getting_Started#Manual_Install_Method'>Manual Method</a>"
+msgstr "如在启动和运行过程中存在任何问题，亦可查阅<a href='https://wiki.unraid.net/%E6%89%8B%E5%8A%A8%E6%96%B9%E5%BC%8F'>手动制作方</a>式"
 
 msgctxt "Creator|"
 msgid "To report issues with this tool, please email:"
@@ -112,5 +112,5 @@ msgid ""
 "Version: %1\n"
 "Build date: %2"
 msgstr ""
-"TODO: %1\n"
-"TODO: %2"
+"版本: %1\n"
+"建造日期: %2"
